<resources>
    <string name="app_name">Challengin</string>
    <string name="phone_error">Enter valid phone number</string>
    <string name="register_fail">Register fail</string>
    <string name="name">Name:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="created_challenges">Created</string>
    <string name="received_tasks">Received</string>
    <string name="my_tasks">Sent</string>
    <string name="score">Score</string>
    <string name="receiver">Receiver</string>
    <string name="perfom">Perfom</string>
    <string name="feed">Feed</string>
    <string name="specifyDeadline">Specify deadline</string>
    <string name="create">Create</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task description</string>
    <string name="pick_deadline">Pick deadLine</string>
</resources>
