<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/createdChallengesFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/created_challenges" />

    <item
        android:id="@+id/receivedTasksFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/received_tasks"
        />

    <item
        android:id="@+id/voteTasksFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/feed"
        />

    <item
        android:id="@+id/scoreListFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/score"
        />

    <item
        android:id="@+id/profileFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/profile"
        />

</menu>